--- a/index.html
+++ b/index.html
@@ -477,7 +477,18 @@
 
                 <div class="contact-content">
                     <div class="contact-form-wrapper">
-                        <form class="contact-form" id="contact-form">
+                       <form class="contact-form"
+      id="contact-form"
+      name="contact"
+      method="POST"
+      data-netlify="true"
+      netlify-honeypot="bot-field">
+
+    <input type="hidden" name="form-name" value="contact">
+    <p hidden>
+        <label>Don’t fill this out: <input name="bot-field"></label>
+    </p>
+
                             <div class="form-group">
                                 <label for="name" class="form-label">Full Name</label>
                                 <input type="text" id="name" name="name" class="form-input" required>
