--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
       netlify-honeypot="bot-field">
 
     <input type="hidden" name="form-name" value="contact">
+                           <input type="hidden" name="redirect" value="/thank-you.html">
     <p hidden>
         <label>Don’t fill this out: <input name="bot-field"></label>
     </p>
