--- a/index.html
+++ b/index.html
@@ -477,15 +477,22 @@
 
                 <div class="contact-content">
                     <div class="contact-form-wrapper">
-                       <form class="contact-form"
+                      <form class="contact-form"
       id="contact-form"
       name="contact"
       method="POST"
       data-netlify="true"
-      netlify-honeypot="bot-field">
+      netlify-honeypot="bot-field"
+      action="/thank-you.html">
 
+    <!-- Honeypot field (hidden from users) -->
+    <input type="hidden" name="bot-field">
+
+    <!-- Required for Netlify -->
     <input type="hidden" name="form-name" value="contact">
-                           <input type="hidden" name="redirect" value="/thank-you.html">
+
+    <!-- your form fields here -->
+
     <p hidden>
         <label>Don’t fill this out: <input name="bot-field"></label>
     </p>
